# OutliPy

./: .gitignore  LICENSE  README.md  exceptions.py  pyproject.toml  structure.txt
accessors/: dataframe.py
dataset/: Final_Outliers_clean_dataset.csv  breast-cancer-dataset-metadata.json  dataset.txt  salary-dataset-metadata.json
detection/: __init__.py  base.py  iqr.py
exceptions/: __init__.py  base.py  columns.py  configuration.py  detection.py  detection_errors.txt  error_code_registry.py  handling.py
handling/: base.py  clip.py  handler.py
notebooks/: Detection.ipynb  Handling.ipynb  test_1.ipynb
outlipy/: __init__.py
outlipy/accessors/: __init__.py  dataframe.py
outlipy/detection/: __init__.py  base.py  iqr.py  mad.py  percentile.py  zscore.py
outlipy/exceptions/: base.py  columns.py
outlipy/handling/: base.py  clip.py
outlipy/utils/: __init__.py  auto_selection.py  validation.py
src/outlipy/: __init__.py
src/outlipy/accessors/: dataframe.py
src/outlipy/detection/: __init__.py  base.py  iqr.py  mad.py  percentile.py  zscore.py
src/outlipy/exceptions/: base.py  columns.py  configuration.py  detection.py  handling.py
src/outlipy/handling/: __init__.py  base.py  central_tendency.py  constant_replacement.py  group_handling.py  handler.py  interpolation.py  mean.py  remove.py  winsorization.py
src/outlipy/utils/: __init__.py  auto_selection.py  validation.py
utils/: __init__.py  validation.py
