[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlipy"
version = "0.1.0"
description = "A Python library for outlier detection and handling."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# Automatic package discovery
dependencies = [
    "pandas",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
